# cone_follower_ws

./: .envrc  .gitignore  GEMINI.md  README.md  justfile  requirements.txt
data/svo_files/: .gitignore
docs/: PREREQUISITES.md  ROADMAP.md  USAGE.md
src/cone_follower_control/: README.md  package.xml  setup.cfg  setup.py
src/cone_follower_control/cone_follower_control/: pure_pursuit_node.py
src/cone_follower_msgs/: CMakeLists.txt  package.xml
src/cone_follower_msgs/msg/: Cone.msg
src/cone_follower_perception/: README.md  package.xml  setup.cfg  setup.py
src/cone_follower_perception/cone_follower_perception/: core_logic.py  local_map_node.py  unified_perception_node.py  zed_yolo_tf_node.py
src/cone_follower_perception/launch/: hardware.launch.py  simulation.launch.py  zed_perception.launch.py
src/cone_follower_perception/scripts/: train_yolo.py
src/cone_follower_perception/test/: test_core_logic.py  test_local_map_node.py  test_unified_perception_node.py
src/cone_follower_planning/: package.xml  setup.cfg  setup.py
src/cone_follower_planning/cone_follower_planning/: centerline_generator_node.py
src/cone_follower_simulation/: package.xml  setup.cfg  setup.py
src/cone_follower_simulation/cone_follower_simulation/: cone_visualization_node.py  fsds_track_bridge.py  mock_track_publisher.py
src/cone_follower_simulation/launch/: fsds_simulation.launch.py
src/cone_follower_simulation/rviz/: cameras.rviz  fsds_config.rviz  zed_perception.rviz
src/cone_follower_vehicle_interface/: README.md  package.xml  setup.cfg  setup.py
src/cone_follower_vehicle_interface/cone_follower_vehicle_interface/: FoxPi_write.py  aps_control.py  vehicle_interface_node.py  vehicle_interface_node_2.py
src/cone_follower_vehicle_interface/cone_follower_vehicle_interface/true python/: vehicle_interface_node.py
src/cone_follower_vehicle_interface/launch/: real_world.launch.py
src/control/: package.xml  setup.py
src/perception/: package.xml  setup.py
src/planning/: package.xml  setup.py
src/simulation/: package.xml  setup.py
src/simulation/simulation/: mock_track_publisher.py
src/vehicle_interface/: package.xml  setup.py
tools/FSDS/: .gitignore  settings.json
