<?xml version="1.0"?>
<package format="3">
  <name>cone_follower_perception</name>
  <version>0.0.0</version>
  <description>Perception package for cone detection and localization.</description>
  <maintainer email="howardchueh@todo.todo">howardchueh</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>zed_msgs</depend>
  <depend>cone_follower_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <export><build_type>ament_python</build_type></export>
</package>
