<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.0.0</version>
  <description>Perception package for cone detection and localization.</description>
  <maintainer email="howardchueh@todo.todo">howardchueh</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <depend>cone_follower_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
