<?xml version="1.0"?>
<package format="3">
  <name>vehicle_interface</name>
  <version>0.0.0</version>
  <description>Vehicle interface package for low-level control communication.</description>
  <maintainer email="howardchueh@todo.todo">howardchueh</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <depend>cone_follower_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
